@@ -35,25 +35,38 @@ static Rpg::Logger static_logger("engine", Rpg::LT_BOTH);
  * Create a dialog based on a CEGUI XML-based layout file.
  *
  * \param layoutName the xml layout filename.
+ * \param uniqueName a context name that is unique to avoid a 
+ *          CEGUI::AlreadyExistsException
  *
  */
-CeguiDialog::CeguiDialog(const string& layoutName):
+CeguiDialog::CeguiDialog(const string& layoutName, const string& uniqueName):
   mLayoutName(layoutName),
+  mUniqueName(uniqueName),
   mRootWindow(NULL),
   mDialogWindow(NULL),
   mWmgr(NULL)
 {
   mWmgr = CEGUI::WindowManager::getSingletonPtr();
+
+  // Create the parent window using unique name, makes it fullsize
+  // and transparent
+  mDialogWindow=mWmgr->createWindow("Vanilla/StaticImage", uniqueName);
+  mDialogWindow->setProperty("Size", "{{1,0},{1,0}}");
+  mDialogWindow->setProperty("FrameEnabled", "False");
+  mDialogWindow->setProperty("BackgroundEnabled", "False");
+  
+  // Load the given layout file
+  CEGUI::Window* layoutWindow = mWmgr->loadLayoutFromFile(mLayoutName);
+
   mRootWindow = CEGUI::System::getSingleton().getDefaultGUIContext().
     getRootWindow();
-
-  mDialogWindow = mWmgr->loadLayoutFromFile(mLayoutName);
   mRootWindow->addChild(mDialogWindow);
+  mDialogWindow->addChild(layoutWindow);
 
   hide();
 
   CEGUI::PushButton* btnNetPl = (CEGUI::PushButton *)mDialogWindow->
-    getChild("winToolbar/btnOk");
+    getChild("nyiRoot/winToolbar/btnOk");
   btnNetPl->subscribeEvent(CEGUI::PushButton::EventClicked, CEGUI::Event::Subscriber(&CeguiDialog::onOk, this));
 }
 
